Actualizar tailwind de v3 a v4

--- a/htmltmpl/app/inicio.html
+++ b/htmltmpl/app/inicio.html
@@ -1,7 +1,7 @@
 <h2 class="p-3 text-3xl text-center">
 	Pargo 🐟
 </h2>
-<main class="flex flex-wrap items-center justify-center flex-grow gap-8">
+<main class="flex flex-wrap items-center justify-center grow gap-8">
 
 	<a href="/paquetes" class="flex items-center justify-center p-8 text-2xl transition-transform bg-cyan-900 rounded-lg shadow-md hover:-translate-y-2">
 		Entidades 📦
