--- a/htmltmpl/consulta-nueva.html
+++ b/htmltmpl/consulta-nueva.html
@@ -1,6 +1,6 @@
 <header class="flex gap-4 p-2 pb-4">
 	<a class="inline-block text-2xl whitespace-nowrap" href="/">🏠</a>
-	<h2 class="flex-grow text-2xl font-bold text-center">{{ $.Tabla.Nombre.Humano }} - Relaciones</h2>
+	<h2 class="grow text-2xl font-bold text-center">{{ $.Tabla.Nombre.Humano }} - Relaciones</h2>
 	<button type="submit" form="main">Generar consulta SQL</button>
 	<a class="inline-block text-2xl whitespace-nowrap" href="/">❌</a>
 </header>
@@ -9,7 +9,7 @@
 
 	<section id="nombre" class="container mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				Nombre y propiedades de la consulta
 			</h3>
 		</header>
