--- a/htmltmpl/consultas.html
+++ b/htmltmpl/consultas.html
@@ -1,5 +1,5 @@
 <header class="flex gap-4 p-2 pb-4">
-	<h1 class="flex-grow text-2xl whitespace-nowrap"><a href="/">Consultas</a></h1>
+	<h1 class="grow text-2xl whitespace-nowrap"><a href="/">Consultas</a></h1>
 	<input type="search" class="form-control" oninput="filtrarArticles(this.value)" placeholder="Buscar consulta...">
 	<button id="showCheckboxsBtn" class="px-4 py-2 bg-cyan-700 rounded-md" type="button" onclick="showCheckboxs()">Filtr.</button>
 	<button id="applyCheckboxsBtn" class="hidden px-4 py-2 bg-cyan-700 rounded-md" type="submit" form="seleccionaConsultas">Aplicar</button>
