--- a/htmltmpl/d_dominios.html
+++ b/htmltmpl/d_dominios.html
@@ -4,7 +4,7 @@
 
 	<section class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center justify-between gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				<a href="/dominios">Dominios</a>
 			</h3>
 			<div class="max-w-40">
