--- a/htmltmpl/ddd/consulta.html
+++ b/htmltmpl/ddd/consulta.html
@@ -5,7 +5,7 @@
 
 	<section id="nombre" class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				<span class="p-1 font-mono text-white bg-violet-700 rounded">consulta</span>
 				{{ .Paquete.Nombre }}.{{ .Consulta.NombreItem }}
 			</h3>
@@ -79,7 +79,7 @@
 
 	<section id="campos" class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				Campos
 			</h3>
 		</header>
@@ -145,7 +145,7 @@
 
 	<section id="relaciones" class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				Relaciones
 			</h3>
 		</header>
@@ -244,7 +244,7 @@
 
 	<section id="generar" class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				Generar código
 			</h3>
 		</header>
