--- a/htmltmpl/ddd/tabla-nueva.html
+++ b/htmltmpl/ddd/tabla-nueva.html
@@ -4,7 +4,7 @@
 <main class="w-full px-2 mx-auto xl:px-6">
 	<section id="nombre" class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				<span class="p-1 font-mono text-white bg-teal-700 rounded">tabla</span>
 			</h3>
 		</header>
