--- a/htmltmpl/diseño-flowy.html
+++ b/htmltmpl/diseño-flowy.html
@@ -1,7 +1,7 @@
 {{ with $.Diseño }}
 <header class="flex gap-3 pb-6">
 	<a class="inline-block text-2xl whitespace-nowrap" href="/">🏠</a>
-	<h2 class="flex-grow text-2xl font-bold text-center">Diseño</h2>
+	<h2 class="grow text-2xl font-bold text-center">Diseño</h2>
 	<a class="inline-block text-2xl whitespace-nowrap" href="/">❌</a>
 </header>
 
