--- a/htmltmpl/entidades.html
+++ b/htmltmpl/entidades.html
@@ -1,10 +1,10 @@
 {{ template "app/nav" . }}
 
-<main class="container flex flex-col flex-grow min-h-0 gap-4 mx-auto">
+<main class="container flex flex-col grow min-h-0 gap-4 mx-auto">
 
 	<section class="flex flex-col min-h-0 mb-4 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center justify-between gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				Entidades
 			</h3>
 			<div class="max-w-40">
@@ -49,7 +49,7 @@
 	{{ if .Warnings }}
 	<section class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				Warnings
 			</h3>
 		</header>
