--- a/htmltmpl/paquete.html
+++ b/htmltmpl/paquete.html
@@ -1,13 +1,13 @@
 <header class="flex gap-4 p-2 pb-4">
 	<a class="inline-block float-left text-2xl whitespace-nowrap" href="/">🏠</a>
-	<h2 class="flex-grow text-2xl font-bold text-center">Paquete</h2>
+	<h2 class="grow text-2xl font-bold text-center">Paquete</h2>
 </header>
 
-<main class="container flex flex-col flex-grow min-h-0 gap-4 mx-auto">
+<main class="container flex flex-col grow min-h-0 gap-4 mx-auto">
 
 	<section class="flex flex-col min-h-0 mb-4 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center justify-between gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				Entidades
 			</h3>
 			<div class="max-w-40">
@@ -52,7 +52,7 @@
 	{{ if .Warnings }}
 	<section class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				Warnings
 			</h3>
 		</header>
