--- a/htmltmpl/tabla-referencias.html
+++ b/htmltmpl/tabla-referencias.html
@@ -1,6 +1,6 @@
 <header class="flex gap-4 p-2 pb-4">
 	<a class="inline-block text-2xl whitespace-nowrap" href="/">🏠</a>
-	<h2 class="flex-grow text-2xl font-bold text-center">Tablas que referencian {{ $.Tabla.Nombre.Humano }}</h2>
+	<h2 class="grow text-2xl font-bold text-center">Tablas que referencian {{ $.Tabla.Nombre.Humano }}</h2>
 	<a class="inline-block text-2xl whitespace-nowrap" href="/">❌</a>
 </header>
 
