--- a/htmltmpl/d_epicas.html
+++ b/htmltmpl/d_epicas.html
@@ -1,6 +1,6 @@
 <header class="flex gap-3 pb-6">
 	<a class="inline-block text-2xl whitespace-nowrap" href="/">🏠</a>
-	<h2 class="flex-grow text-2xl font-bold text-center">Dominio</h2>
+	<h2 class="grow text-2xl font-bold text-center">Dominio</h2>
 	<a class="inline-block text-2xl whitespace-nowrap" href="/dominios">❌</a>
 </header>
 <main class="container mx-auto">
@@ -36,7 +36,7 @@
 
 <dialog id="dlgEdit" class="p-3 rounded-lg" onfocus="console.log('focus')">
 	<header class="flex flex-wrap items-center gap-3 pb-2">
-		<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Dominio</h2>
+		<h2 class="grow w-full text-xl text-center sm:w-auto sm:text-left">Dominio</h2>
 		<button type="button" class="w-10 py-1 text-xl text-slate-200 bg-slate-600 rounded-lg" onclick="this.closest('dialog').close()" title="Cerrar"><i class="fa-solid fa-xmark"></i></button>
 	</header>
 	{{ with .Dominio }}
