--- a/htmltmpl/ddd/campo-enums.html
+++ b/htmltmpl/ddd/campo-enums.html
@@ -1,5 +1,5 @@
 <header class="flex flex-wrap items-center gap-3 pb-2">
-	<h2 class="flex-grow w-full text-xl text-center sm:w-auto sm:text-left">Valores posibles para <b>{{ .Campo.NombreHumano }}</b></h2>
+	<h2 class="grow w-full text-xl text-center sm:w-auto sm:text-left">Valores posibles para <b>{{ .Campo.NombreHumano }}</b></h2>
 	<button type="button" class="w-10 py-1 text-2xl text-slate-200 bg-slate-400 rounded-lg hover:bg-slate-300" onclick="editValoresPosibles(this)" title="Editar">✏️</button>
 	<button type="button" class="w-10 py-1 text-2xl text-slate-200 bg-slate-400 rounded-lg hover:bg-slate-300" onclick="this.closest('dialog').close()" title="Cerrar">✖️</button>
 </header>
