--- a/htmltmpl/ddd/consulta-nueva.html
+++ b/htmltmpl/ddd/consulta-nueva.html
@@ -5,7 +5,7 @@
 
 	<section id="nombre" class="mb-6 bg-cyan-900 rounded-lg shadow-lg">
 		<header class="flex items-center gap-4 p-4 bg-cyan-800 rounded-t-lg">
-			<h3 class="flex-grow text-xl font-bold">
+			<h3 class="grow text-xl font-bold">
 				<span class="p-1 font-mono text-white bg-teal-700 rounded">consulta</span>
 				Nueva
 			</h3>
