--- a/htmltmpl/tablas.html
+++ b/htmltmpl/tablas.html
@@ -1,7 +1,7 @@
 {{ template "app/nav" . }}
 
 <header class="flex gap-4 p-2 pb-4">
-	<h1 class="flex-grow text-2xl whitespace-nowrap"><a href="/">Entidades</a></h1>
+	<h1 class="grow text-2xl whitespace-nowrap"><a href="/">Entidades</a></h1>
 
 	<input type="search" class="form-control" oninput="filtrarArticles(this.value)" placeholder="Buscar entidad...">
 
