Hacer módulo instalable

--- a/htmltmpl/tabla-nueva.html
+++ b/htmltmpl/tabla-nueva.html
@@ -18,7 +18,7 @@
 
 			<div>
 				<label for="txt_paquete_parent_dir">URL de repositorio</label>
-				<input class="form-control" name="paquete_parent_dir" id="txt_paquete_parent_dir" type="text" placeholder="Ejemplo: monorepo" value="{{ .PaqueteParentDir }}" />
+				<input class="form-control" name="paquete_parent_dir" id="txt_paquete_parent_dir" type="text" placeholder="Ejemplo: github.com/pargomx/pargocode" value="{{ .PaqueteParentDir }}" />
 			</div>
 			<div>
 				<label for="NombrePaquete">Nombre del paquete</label>
