--- a/htmltmpl/consulta-nueva.html
+++ b/htmltmpl/consulta-nueva.html
@@ -16,7 +16,7 @@
 		<div class="grid items-end grid-cols-4 p-4 gap-x-4 gap-y-2">
 			<div>
 				<label for="txt_paquete_parent_dir">URL de repositorio*</label>
-				<input class="form-control" name="paquete_parent_dir" id="txt_paquete_parent_dir" type="text" placeholder="Ejemplo: monorepo" value="{{ .Consulta.PaqueteParentDir }}" />
+				<input class="form-control" name="paquete_parent_dir" id="txt_paquete_parent_dir" type="text" placeholder="Ejemplo: github.com/pargomx/pargocode" value="{{ .Consulta.PaqueteParentDir }}" />
 			</div>
 			<div>
 				<label for="NombrePaquete">Nombre del paquete*</label>
